<resources>
    <string name="app_name">WalletForAndroid</string>
    <string name="ip">ip</string>
    <string name="port">port</string>
    <string name="connect">connect</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="confirm_password">confirm password</string>
    <string name="back">back</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="typename">typename</string>
    <string name="value">value</string>

    <string name="money">money</string>
    <string name="budget">budget</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_money">add money</string>
    <string name="remove_money">remove money</string>
    <string name="transfer_money">transfer money</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="add_budget">add budget</string>
    <string name="transfer_budget">transfer budget</string>
    <string name="remove_budget">remove budget</string>
    <string name="use_money">use money</string>
    <string name="money_type">money type</string>
    <string name="budget_type">budget type</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">detail</string>
    <string name="update">update</string>
    <string name="date">date</string>
    <string name="event">event</string>
    <string name="eventParam">event param</string>
    <string name="rollBackParam">roll back param</string>
</resources>
